Dark mode fixes

--- a/styles/_media.scss
+++ b/styles/_media.scss
@@ -198,6 +198,9 @@
     .contact-me .typewriter {
         display: block;
         margin-top: .6rem;
+        .typewrite {
+            width: 100%;
+        }
     }
 
 }
