--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -28,10 +28,13 @@
     --color-gold: #af966b;
     --color-ota: #a22222;
     --color-fukushima: #048665;
+    --color-jt: #c1282f;
     --br-sm-2: 14px;
     --box-shadow-1: 0 3px 15px rgba(0,0,0,.3);
     --shadow-soft: 0 7px 29px -13px rgb(0 0 0 / 20%);
     --typewriter-bg: #fff;
+    --role-border: transparent;
+    --mail-line: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
 }
   
 .dark-mode {
@@ -44,12 +47,15 @@
   --color-black: #fff;
   --color-grey0: #313131;
   --color-grey1: #dbe1e8;
-  --color-grey2: #b2becd;
+  --color-grey2: #343434;
   --color-grey3: #6c7983;
-  --color-grey4: #454e56;
+  --color-grey4: #a0a0a0;
   --color-grey5: #dbe1e8;
   --color-grey6: #b1b1b1;
   --typewriter-bg: #2b2b2b;
+  --role-border: #4f4f4f;
+  --mail-line: linear-gradient(120deg, #b64717 0%, #9900a3 100%);
+  --color-jt: #871b20;
   .header-content .right-header .media .bright {
     filter: brightness(100);
   }
@@ -299,6 +305,7 @@ header {
         border-radius: 19px;
         color: #c1282f;
         box-shadow: 0 7px 29px -13px rgba(0,0,0,.2);
+        border: 1px solid var(--role-border);
       }
     } 
 
@@ -853,7 +860,7 @@ header {
 
 
 .underline--magical {
-  background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
+  background-image:  var(--mail-line);
   background-repeat: no-repeat;
   background-size: 100% 0.2em;
   background-position: 0 88%;
@@ -865,14 +872,17 @@ header {
 
 .contact-me {
   margin-top: 2rem;
-  a.typewrite {
-    background:var(--typewriter-bg);
-    padding: 0.6rem 0.6rem;
-    border-radius: 18px;
-    color: var(--color-grey6);
-    width: 100%;
-    min-width: 20rem;
-    font-weight: 400;
+  .typewriter {
+    display: inline;
+    margin-left: 5px;
+    a.typewrite {
+      background:var(--typewriter-bg);
+      padding: 0.6rem 0.6rem;
+      border-radius: 18px;
+      color: var(--color-grey6);
+      max-width: 20rem;
+      font-weight: 400;
+    }
   }
 }
 
